objects/sf42_Devices__c.object
<CustomObject>
    <fields>
        <fullName>sf42_Status__c</fullName>
        <inlineHelpText>This field is used for the order processing process.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consumables</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Demo Equipment</fullName>
                </value>
                <value>
                    <fullName>Demo Equipment KK</fullName>
                </value>
                <value>
                    <fullName>Demo Equipment NDT</fullName>
                </value>
                <value>
                    <fullName>Due to ordered</fullName>
                </value>
                <value>
                    <fullName>Fix Assets</fullName>
                </value>
                <value>
                    <fullName>No Longer Existing</fullName>
                </value>
                <value>
                    <fullName>on Stock</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Send back to Germany</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Sold by 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Sold by Miharu</fullName>
                </value>
                <value>
                    <fullName>Sold by Trading Company</fullName>
                </value>
                <value>
                    <fullName>Sold by us</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Supplier__c</fullName>
        <formula>sf42_Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Account_Manager_OO__c</fullName>
        <label>Account Manager (OO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Activation_Codes__c</fullName>
        <label>Activation Codes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_de_Calibration_Date__c</fullName>
        <description>When Task type &quot;Calibration&quot; is &quot;Completed&quot; and &quot;Due Date&quot; is in the past then &quot;Due Date&quot; value is put here.
Name changed from &quot;Calibration Date&quot; to &quot;Last Calibration Date&quot; on 2012-03-07 PawelWozniak</description>
        <inlineHelpText>Last time when device was calibrated.
****************
Use &quot;New Calibration&quot; button from &quot;Open Activities&quot; section to add calibration date.</inlineHelpText>
        <label>Last Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_Competition_Device__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you describe device made by competition which is owned by account.</inlineHelpText>
        <label>Competition Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_de_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who was responsible to make decision that company buy it.</inlineHelpText>
        <label>Decision Maker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.sf42_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Devices (Decision Maker)</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_de_End_Date__c</fullName>
        <label>OO: Calibration Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_HW_Version__c</fullName>
        <label>HW Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Notes_Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Notes Migration ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Chose item from product list.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_de_Purchased_SW__c</fullName>
        <label>Purchased SW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_REF__c</fullName>
        <label>REF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Repair_Date__c</fullName>
        <inlineHelpText>Last time when device was repaired.
****************
Use &quot;New Repair&quot; button from &quot;Open Activities&quot; section to add repair date.</inlineHelpText>
        <label>Last Repair Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_UNID__c</fullName>
        <externalId>true</externalId>
        <label>UNID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is using this device on site?
# On devices that has parent device this field is automatically updated.</inlineHelpText>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.sf42_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Devices (User)</relationshipLabel>
        <relationshipName>Devices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_delivery_delay__c</fullName>
        <label>Delivery delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf42_gl_ALI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
    <label>PT - Device</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Detail_Desciption2__c</columns>
        <columns>sf42_de_Product__c</columns>
        <columns>ptt_Next_calibration_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_My_Devices</fullName>
        <columns>NAME</columns>
        <columns>sf42_Description__c</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>sf42_Status__c</columns>
        <columns>sf42_Account__c</columns>
        <filterScope>Mine</filterScope>
        <label>All My Devices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Belgium_Devices</fullName>
        <columns>NAME</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>ptt_Next_calibration_date__c</columns>
        <columns>ptt_Calibration_interval__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>ptt_Account_Business_Unit__c</columns>
        <columns>sf42_de_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Account_Business_Unit__c</field>
            <operation>equals</operation>
            <value>Belgium</value>
        </filters>
        <label>Belgium Devices</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Belgium</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Calibration_data</fullName>
        <columns>Parent_Device__c</columns>
        <columns>NAME</columns>
        <columns>sf42_Description__c</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>sf42_de_Calibration_Date__c</columns>
        <columns>ptt_Next_calibration_date__c</columns>
        <columns>sf42_Status__c</columns>
        <columns>ptt_Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Next_calibration_date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2014</value>
        </filters>
        <filters>
            <field>ptt_Account_Name__c</field>
            <operation>equals</operation>
            <value>PTKK DEMO ALI,PTKK DEMO CM</value>
        </filters>
        <label>PTKK Calibration data （PTKK DEMO item）</label>
        <language>en_US</language>
        <sharedTo>
            <group>SG_visibilty_extension</group>
            <role>Japan</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Calibration_this_and_next_quarter</fullName>
        <columns>NAME</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_de_Calibration_Date__c</columns>
        <columns>ptt_Calibration_interval__c</columns>
        <columns>ptt_Next_calibration_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Next_calibration_date__c</field>
            <operation>equals</operation>
            <value>THIS_QUARTER,NEXT_QUARTER</value>
        </filters>
        <label>Calibration this and next quarter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Calibration_this_year</fullName>
        <columns>NAME</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_de_Calibration_Date__c</columns>
        <columns>ptt_Calibration_interval__c</columns>
        <columns>ptt_Next_calibration_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Next_calibration_date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Calibration this year</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Calibration_this_year_FR</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account_Name__c</columns>
        <columns>sf42_de_Decision_Maker__c</columns>
        <columns>sf42_de_User__c</columns>
        <columns>ptt_Calibration_interval__c</columns>
        <columns>ptt_Next_calibration_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Next_calibration_date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>ptt_Account_Business_Unit__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>Calibration this year FR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Consumables</fullName>
        <columns>NAME</columns>
        <columns>sf42_Description__c</columns>
        <columns>sf42_Detail_Desciption2__c</columns>
        <columns>sf42_Purchase_price__c</columns>
        <columns>sf42_Supplier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Status__c</field>
            <operation>equals</operation>
            <value>Consumables</value>
        </filters>
        <label>Consumables</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Japan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_entry_2015</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>4/21/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>ptt_User_Business_Unit__c</field>
            <operation>equals</operation>
            <value>Singapore</value>
        </filters>
        <label>Data entry-2015</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Singapore</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SingaporeEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SingaporeManagement</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delivered</fullName>
        <columns>NAME</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Shipment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Status__c</field>
            <operation>equals</operation>
            <value>Sold by us</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>EC5 5500</value>
        </filters>
        <filters>
            <field>sf42_Customer_Delivery_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <label>Delivered</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Japan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Demo_Equipment_NDT_PTKK</fullName>
        <columns>NAME</columns>
        <columns>sf42_Description__c</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>ptt_Account_Name__c</columns>
        <columns>sf42_Received_from_SP_on__c</columns>
        <columns>sf42_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Status__c</field>
            <operation>equals</operation>
            <value>Demo Equipment NDT</value>
        </filters>
        <filters>
            <field>sf42_Account__c</field>
            <operation>equals</operation>
            <value>PRUFTECHNIK NDT GmbH</value>
        </filters>
        <label>PTKK Demo Equipment NDT</label>
        <language>en_US</language>
        <sharedTo>
            <group>SG_visibilty_extension</group>
            <roleAndSubordinatesInternal>Japan</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Devices_Missing_Account</fullName>
        <columns>NAME</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>sf42_de_User__c</columns>
        <columns>sf42_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Account_Name__c</field>
            <operation>equals</operation>
        </filters>
        <label>! Devices Missing Account Info</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Belgium</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BelgiumEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BelgiumManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Brazil</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BrazilEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BrazilManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CEO_North_America</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Canada</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CanadaEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CanadaManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>China</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ChinaEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ChinaManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>China_Division_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Dubai</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DubaiEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DubaiManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DubaiPartner</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>France</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>FranceEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>FranceManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Germany</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>GermanyCMEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>GermanyCMManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>GermanyNDTEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>GermanyNDTManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Germany_Chatter_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Headquarters</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Italy</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ItalyEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ItalyManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Japan</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>JapanEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>JapanManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>North_America</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandTechnology</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandTechnologyEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandTechnologyManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandWibrem</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandWibremEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandWibremManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Russia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RussiaEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RussiaManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Singapore</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SingaporeEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SingaporeManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Singapore_ex_employee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Spain</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SpainEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SpainManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SpainTelemarketingoperator</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Turkey</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Turkey_Employee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Turkey_Management</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UK</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UKManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UKMidMgmt</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UK_Employee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAEddytech</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAEddytechEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAEddytechManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USA_PRUFTECHNIK_Inc</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USA_PRUFTECHNIK_Inc_Employee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USA_PRUFTECHNIK_Inc_Management</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USA_Service_Inc</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAexemployee</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Devices_ordered_PO</fullName>
        <columns>sf42_Status__c</columns>
        <columns>Purchase_Order__c</columns>
        <columns>sf42_Order_Date__c</columns>
        <columns>NAME</columns>
        <columns>ptt_Purchase_price_USD__c</columns>
        <columns>sf42_Purchase_price__c</columns>
        <columns>Customer_Price_JPY__c</columns>
        <columns>sf42_Description__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Delivery_expected_at__c</columns>
        <columns>sf42_Received_from_SP_on__c</columns>
        <columns>sf42_Customer_Delivery_Date__c</columns>
        <columns>Order_Processing__c</columns>
        <columns>sf42_Purchase_price_Euro__c</columns>
        <columns>sf42_COGS_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Purchase_Order__c</field>
            <operation>equals</operation>
            <value>803961</value>
        </filters>
        <filters>
            <field>sf42_Received_from_SP_on__c</field>
            <operation>equals</operation>
        </filters>
        <label>Working List -PO Base</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Japan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Devices_overdue_calibration</fullName>
        <columns>NAME</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_de_Calibration_Date__c</columns>
        <columns>ptt_Calibration_interval__c</columns>
        <columns>ptt_Next_calibration_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Next_calibration_date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Calibration overdue</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Devices_to_Calibrate_in_this_and_next_mo</fullName>
        <columns>NAME</columns>
        <columns>sf42_Serial_Number__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_de_Calibration_Date__c</columns>
        <columns>ptt_Calibration_interval__c</columns>
        <columns>ptt_Next_calibration_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Next_calibration_date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH,NEXT_MONTH</value>
        </filters>
        <label>Calibration in this and next month</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Item No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>